<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bali_details_container"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/background_detail">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_place_details_height"
        android:layout_gravity="bottom"
        android:layout_marginEnd="@dimen/default_layout_margin_halved"
        android:layout_marginStart="@dimen/default_layout_margin_halved"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/background_detail">

                <ImageView
                    android:id="@+id/headerImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/diablo_logo" />

            </RelativeLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_layout_margin"
                android:textColor="@color/btn_text"
                android:textSize="@dimen/textsize_very_huge"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/descriptionLevelLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_layout_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_hero_level_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_layout_margin_quartered"
                    android:layout_marginStart="@dimen/default_layout_margin_quartered"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/level"
                    android:textColor="@color/btn_text"
                    android:textSize="@dimen/textsize_big" />

                <TextView
                    android:id="@+id/card_hero_level_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_layout_margin_quartered"
                    android:layout_marginStart="@dimen/default_layout_margin_quartered"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:textColor="@color/btn_text"
                    android:textSize="@dimen/textsize_big" />

                <TextView
                    android:id="@+id/card_hero_paragon_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_layout_margin_quartered"
                    android:layout_marginStart="@dimen/default_layout_margin_quartered"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:text="@string/paragon"
                    android:textColor="@color/btn_text"
                    android:textSize="@dimen/textsize_big" />

                <TextView
                    android:id="@+id/card_hero_paragon_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_layout_margin_quartered"
                    android:layout_marginStart="@dimen/default_layout_margin_quartered"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:textColor="@color/btn_text"
                    android:textSize="@dimen/textsize_big" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/descriptionClassLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_layout_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_hero_class_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_layout_margin_quartered"
                    android:layout_marginStart="@dimen/default_layout_margin_quartered"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:text="@string/class_spinner"
                    android:textColor="@color/btn_text"
                    android:textSize="@dimen/textsize_big" />

                <TextView
                    android:id="@+id/card_hero_class_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_layout_margin_quartered"
                    android:layout_marginStart="@dimen/default_layout_margin_quartered"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:textColor="@color/btn_text"
                    android:textSize="@dimen/textsize_big" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/takeMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/button_red"
            android:gravity="center"
            android:padding="@dimen/default_layout_margin"
            android:text="@string/choose_me"
            android:textColor="@color/btn_text" />

    </android.support.v7.widget.CardView>
</FrameLayout>